cal-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-calc-frontend-svc
  namespace: calculator
  labels:
    name: calc-frontend-svc
    app: multicalchart
    chart: multicalchart-0.1.0
    release: calculator
spec:
  type: LoadBalancer
  selector:
    name: calc-frontend 
    release: calculator
  ports:
   - port: 80
     name: calculator-calc-frontend
     targetPort: 3000
     protocol: TCP
---
# Source: multicalchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-calc-backend-svc
  namespace: calculator
  labels:
    name: calc-backend-svc
    app: multicalchart
    chart: multicalchart-0.1.0
    release: calculator
spec:
  type: ClusterIP
  selector:
    name: calc-backend
    release: calculator
  ports:
  - port: 80
    protocol: TCP
    name: calculator-calc-backend
    targetPort: 3001
---
# Source: multicalchart/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multicalchart-frontend
  namespace: calculator
  labels:
    app: multicalchart-frontend
    chart: multicalchart-0.1.0
    release: calculator
    heritage: Tiller
    role: frontend
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: multicalchart
        name: calc-frontend
        release: calculator
    spec:
      containers:
        - name: calcfrontend
          image: "dzkubereg.azurecr.io/js-calc-frontend:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http         
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: multicalchart/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: multicalchart-backend
  namespace: calculator
  labels:
    app: multicalchart-backend
    chart: multicalchart-0.1.0
    release: calculator
    heritage: Tiller
    role: backend
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: multicalchart
        name: calc-backend
        release: calculator
    spec:
      containers:
        - name: calcbackend
          image: "dzkubereg.azurecr.io/js-calc-backend:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              name: http         
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 3001
          readinessProbe:
            httpGet:
              path: /ping
              port: 3001
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
