oathkeeper-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ory-oathkeeper
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind:  Mapping
      name:  ory-oathkeeper_mapping
      prefix: /ory-oathkeeper/
      service: http://ory-oathkeeper
spec:
  ports:
  - name: http-ory-oathkeeper
    port: 80
    targetPort: http-api
  selector:
    app: ory-oathkeeper
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-oathkeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-oathkeeper
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ory-oathkeeper
    spec:
      containers:
      - name: ory-oathkeeper
        image: oryd/oathkeeper:v0.13.8_oryOS.8
        imagePullPolicy: Always
        command: ["oathkeeper", "serve", "api"]
        ports:
        - name: http-api
          containerPort: 4456
        resources:
          limits:
            cpu: "0.1"
            memory: 100Mi
